# ton-indexer

./: .dockerignore  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.worker-arm64  LICENSE  README.md  ansible.cfg  check-node-sync.yaml  collect-logs.yaml  configure.sh  deploy-clickhouse.yaml  deploy-database.sh  deploy-emulation.yaml  deploy-index-classifier.yaml  deploy-indexer.yaml  deploy-metadata.yaml  deploy-pendings.yaml  deploy-streaming.yaml  deploy-worker.yaml  docker-compose-patroni.yml  docker-compose.alembic.yaml  docker-compose.api.yaml  docker-compose.database.yaml  docker-compose.events.yaml  docker-compose.imgproxy.yaml  docker-compose.jupyter.yaml  docker-compose.swarm.yaml  docker-compose.web.yaml  docker-compose.worker.yaml  docker-compose.yaml  entrypoint.sh  go.mod  go.sum  indexer-queries.ipynb  indexer.ipynb  main.go  requirements.yml  (+8 more)
ansible/: config.yaml  (+5 more)
sandbox-cpp/: CMakeLists.txt
sandbox-cpp/src/: DbReader.cpp  DbReader.h  Scheduler.cpp  Scheduler.h  main.cpp
ton-index-clickhouse/: CMakeLists.txt
ton-index-clickhouse/src/: IndexScheduler.cpp  IndexScheduler.h  InsertManagerClickhouse.cpp  InsertManagerClickhouse.h  main.cpp
ton-index-postgres/: CMakeLists.txt
ton-index-postgres-v2/: CMakeLists.txt
ton-index-postgres-v2/src/: BlockInterfacesDetector.h  IndexScheduler.cpp  IndexScheduler.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h  main.cpp
ton-index-postgres/src/: IndexScheduler.cpp  IndexScheduler.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h  main.cpp
ton-index-worker/: CMakeLists.txt  Dockerfile  README.md  bin.json
ton-index-worker/celldb-migrate/: CMakeLists.txt
ton-index-worker/celldb-migrate/src/: main.cpp  main_copy_with_new_settings.cpp
ton-index-worker/cmake/: ApplyPatch.cmake  FindPostgreSQL.cmake
ton-index-worker/cmake/absl/: abslConfig.cmake
ton-index-worker/index-engine/: CMakeLists.txt
ton-index-worker/index-engine/src/: BlockInterfacesDetector.cpp  BlockInterfacesDetector.h  IndexScheduler.cpp  IndexScheduler.h
ton-index-worker/indexer/dev_utils/: migrate.py
ton-index-worker/patches/: fix-secondary-open.patch
ton-index-worker/pgton/: CMakeLists.txt  README.md  pgton--0.1.sql  pgton.c
ton-index-worker/pgton/expected/: basic.out
ton-index-worker/pgton/sql/: basic.sql
ton-index-worker/scripts/: add2systemd.sh  create_indexes.sql  drop_indexes.sql  entrypoint.sh
ton-index-worker/src/: DataParser.cpp  DataParser.h  DbScanner.cpp  DbScanner.h  IndexData.h  IndexScheduler.cpp  IndexScheduler.h  InsertManager.cpp  InsertManager.h  InsertManagerBase.cpp  InsertManagerBase.h  InsertManagerClickhouse.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h  InterfaceDetectors.hpp  convert-utils.h  main.cpp  old_InsertManagerPostgres.cpp  old_InsertManagerPostgres.h  parse_token_data.cpp  parse_token_data.h
ton-index-worker/src/tlb/: tokens.tlb
ton-index-worker/test/: tests.cpp
ton-index-worker/ton-boc-marker/: CMakeLists.txt
ton-index-worker/ton-boc-marker/src/: interfaces.cpp  interfaces.h  logic.cpp  logic.h  main.cpp  wrapper.cpp  wrapper.h
ton-index-worker/ton-celldb-bench/: CMakeLists.txt
ton-index-worker/ton-celldb-bench/src/: BenchmarkInsertManager.cpp  BenchmarkInsertManager.h  BenchmarkStats.cpp  BenchmarkStats.h  main.cpp
ton-index-worker/ton-index-clickhouse/: CMakeLists.txt
ton-index-worker/ton-index-clickhouse/src/: IndexScheduler.cpp  IndexScheduler.h  InsertManagerClickhouse.cpp  InsertManagerClickhouse.h  main.cpp  migrate.cpp
ton-index-worker/ton-index-postgres/: CMakeLists.txt
ton-index-worker/ton-index-postgres-v2/: CMakeLists.txt
ton-index-worker/ton-index-postgres-v2/src/: IndexScheduler.cpp  IndexScheduler.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h
ton-index-worker/ton-index-postgres/src/: BlockInterfacesDetector.h  FailoverBaseline.h  FailoverWatchdog.cpp  FailoverWatchdog.h  IndexScheduler.cpp  IndexScheduler.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h  KvrocksClient.cpp  KvrocksClient.h  KvrocksProgress.cpp  KvrocksProgress.h  PartitionManagerPostgres.cpp  PartitionManagerPostgres.h  main.cpp  migrate.cpp  postgres_types.h  version.h
ton-index-worker/ton-integrity-checker/: CMakeLists.txt
ton-index-worker/ton-integrity-checker/src/: IntegrityChecker.cpp  IntegrityChecker.h  main.cpp
ton-index-worker/ton-kvrocks-state/: CMakeLists.txt
ton-index-worker/ton-kvrocks-state/src/: KvrocksState.cpp  KvrocksState.h
ton-index-worker/ton-marker/: CMakeLists.txt
ton-index-worker/ton-observability/: CMakeLists.txt
ton-index-worker/ton-smc-scanner/: CMakeLists.txt
ton-index-worker/ton-trace-emulator/: CMakeLists.txt
ton-index-worker/ton-trace-task-emulator/: CMakeLists.txt
ton-index-worker/tondb-scanner/: CMakeLists.txt
ton-integrity-checker/: CMakeLists.txt
ton-integrity-checker/src/: IntegrityChecker.cpp  IntegrityChecker.h
ton-smc-scanner/: CMakeLists.txt
ton-smc-scanner/src/: PostgreSQLInserter.cpp  PostgreSQLInserter.h  PostgresInserter.cpp  PostgresInserter.h  SmcScanner.cpp  SmcScanner.h  main.cpp
ton-trace-emulator/: CMakeLists.txt
ton-trace-emulator/src/: BlockEmulator.cpp  BlockEmulator.h  OverlayListener.cpp  OverlayListener.h  RedisListener.cpp  Serializer.hpp  TraceEmulator.cpp  TraceEmulator.h  TraceInserter.cpp  TraceInserter.h  TraceInterfaceDetector.cpp  TraceInterfaceDetector.h  TraceScheduler.cpp  TraceScheduler.h  main.cpp
tondb-scanner/: CMakeLists.txt
tondb-scanner/src/: BlockToSchema.hpp  DataParser.cpp  DataParser.h  DbScanner.cpp  DbScanner.h  EventProcessor.cpp  EventProcessor.h  IndexData.h  IndexScheduler.cpp  IndexScheduler.h  InsertManager.cpp  InsertManager.h  InsertManagerBase.cpp  InsertManagerBase.h  InsertManagerPostgres.cpp  InsertManagerPostgres.h  InterfaceDetectors.hpp  SchemaPostgres.h  Statistics.cpp  Statistics.h  TraceAssembler.cpp  TraceAssembler.h  convert-utils.cpp  convert-utils.h  db-schema.hpp  main.cpp  msgpack-utils.h  parse_token_data.cpp  parse_token_data.h  queue_state.cpp  queue_state.h
tondb-scanner/test/: tests.cpp
(+753 files in other folders)
